--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+      max-width: 100%;
+    height: auto;
 }
 
 .profile-picture {
